fix: remove overview gap

--- a/src/less/aioverview.less
+++ b/src/less/aioverview.less
@@ -92,15 +92,6 @@
   }
 }
 
-@media screen and (max-width: @tablet) {
-  #main_results #results #sidebar #ai-overview-slot {
-    .ltr-margin-left(2%);
-    .ltr-margin-right(2%);
-    width: 96%;
-    max-width: 96%;
-  }
-}
-
 @keyframes ai-overview-shimmer {
   from {
     background-position: 200% 0;
